--- a/application/admin/view/admin/list.html
+++ b/application/admin/view/admin/list.html
@@ -1,44 +1,23 @@
-<!--head-->
-{include file="public/_head"}
-<!--head-->
-
-
-<!-- Main Container -->
-<div class="main-container container-fluid">
-    <!-- Page Container -->
-    <div class="page-container">
-
-        <!-- Page Sidebar -->
-        {include file="public/_left"}
-        <!-- /Page Sidebar -->
-        <!-- Page Content -->
-        <div class="page-content">
-            <!-- Page Breadcrumb -->
-            <div class="page-breadcrumbs">
-                <ul class="breadcrumb">
-                    <li class="active">
-                        <i class="fa fa-home"></i>&nbsp;管理员管理
-                    </li>
-                    <li>管理员列表</li>
-                </ul>
-            </div>
-            <!-- /Page Breadcrumb -->
+{extend name="public/admin_base"}
+{block name="title"}用户列表{/block}
+{block name="page-breadcrumb"}控制面板 / 用户管理 / 用户列表{/block}
+{block name="page-main"}
             <!-- Page Body -->
             <div class="page-body">
                 <div class="row">
                     <div class="col-xs-12">
                         <div class="widget">
                             <div class="widget-header">
-                                <span class="widget-caption">管理员列表</span>
+                                <span class="widget-caption">用户列表</span>
                                 <div class="widget-buttons">
-                                    {$admins->render()|raw|replace}
+                                    {$admins|raw}
                                 </div>
                             </div>
                             <div class="widget-body">
                                 <table class="table table-hover table-bordered">
                                     <thead>
                                         <tr>
-                                            <th>管理员ID</th>
+                                            <th>用户ID</th>
                                             <th>用户名</th>
                                             <th>邮箱</th>
                                             <th>状态</th>
@@ -49,18 +28,18 @@
                                     <tbody>
                                         {volist name="admins" id="vo"}
                                         <tr>
-                                            <td><input disabled type="text" name="id" value="{$vo.id}" dataid="{$vo.id}" size="1" />
+                                            <td><span>{$vo.id}</span>
                                             </td>
                                             <td>{$vo.username} </td>
                                             <td>{$vo.email}</td>
-                                            <td>{if $vo.status==1}正常{else /}禁用{/if}</td>
-                                            <td>{if $vo.is_super==1}超级管理员{else /}普通管理员{/if}</td>
+                                            <td>{if $vo.status==1}正常{else /}<p style="color:red;">禁用</p>{/if}</td>
+                                            <td>{if $vo.is_super==1}超级用户{else /}普通用户{/if}</td>
                                             <td>{if session('admin.is_super')==1} {if $vo.status==1}
                                                 <a href="#" class="admin-status btn btn-darkorange btn-xs" dataid="{$vo.id}" status="{$vo.status}">禁用</a> {else /}
                                                 <a href="#" class="admin-status btn btn-success btn-xs" dataid="{$vo.id}" status="{$vo.status}">启用</a> {/if}
                                                 <a href=" {:url( 'admin/Admin/edit',[ 'id'=>$vo.id])}" class="btn btn-azure btn-xs">编辑</a>
                                                 <a href="#" class="btn btn-danger btn-xs admin-del">删除</a>
-                                                <a href="adminadd.html" class="btn btn-sm btn-primary "><i class="fa fa-plus"></i>&nbsp;添加管理员</a> {/if}
+                                                {/if}
                                             </td>
                                         </tr>
                                         {/volist}
@@ -74,22 +53,8 @@
                 </div>
             </div>
             <!-- /Page Body -->
-
-        </div>
-        <!-- /Page Content -->
-
-    </div>
-    <!-- /Page Container -->
-    <!-- Main Container -->
-
-</div>
-
-<!-- footer -->
-{include file="public/_footer" /}
-<!--  /footer -->
-
-
-
+{/block}
+{block name="page-js"}
 <script>
     $(function() {
         $('.pagination').addClass('pagination-sm');
@@ -98,8 +63,8 @@
         $('.admin-del').click(function() {
 
             var id = $(this).attr('dataid');
-            layer.confirm('确定删除该管理员吗？', {
-                title: '管理员删除确认',
+            layer.confirm('确定删除该用户吗？', {
+                title: '用户删除确认',
                 icon: 3
             }, function(index) {
                 layer.close(index);
@@ -181,7 +146,4 @@
         });
     });
 </script>
-</body>
-<!--  /Body -->
-
-</html>
+{/block}
