--- a/application/admin/view/templates/list.html
+++ b/application/admin/view/templates/list.html
@@ -1,5 +1,6 @@
 {extend name="public/admin_base"}
-
+{block name="title"}任务列表{/block}
+{block name="page-breadcrumb"}控制面板 / 任务管理{/block}
 {block name="page-main"}
 <div class="row">
     <div class="col-xs-12">
