--- a/application/admin/view/public/_left.html
+++ b/application/admin/view/public/_left.html
@@ -10,7 +10,7 @@
         <li>
             <a href="{:url('admin/Templates/list')}" class="menu-dropdown">
                 <i class="menu-icon glyphicon glyphicon glyphicon-list-alt"></i>
-                <span class="menu-text">任务管理</span>
+                <span class="menu-text">任务列表</span>
                 <i class="menu-expand"></i>
             </a>
         </li>
@@ -21,7 +21,25 @@
                 <i class="menu-expand"></i>
             </a>
         </li>
-        
+        <li>
+            <a href="#" class="menu-dropdown">
+                <i class="menu-icon glyphicon glyphicon glyphicon-user"></i>
+                <span class="menu-text">用户管理</span>
+                <i class="menu-expand"></i>
+            </a>
+            <ul class="submenu">
+                <li>
+                    <a href="{:url('admin/Admin/list')}">
+                        <span class="menu-text">用户列表</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="{:url('admin/Admin/add')}">
+                        <span class="menu-text">用户添加</span>
+                    </a>
+                </li>
+            </ul>
+        </li>
     </ul>
 </div>
 <!-- /Page Sidebar -->
