--- a/application/admin/view/import/create_template_first.html
+++ b/application/admin/view/import/create_template_first.html
@@ -34,6 +34,20 @@
                             <input type="button" class="btn btn-info" value="提交" id="subFile">
                         </div>
                     </form>
+                    <br>
+                    <div class="panel panel-info">
+                        <div class="panel-heading">
+                            <h3 class="panel-title">模板文件说明</h3>
+                        </div>
+                            <ul class="list-group">
+                                <li class="list-group-item">1、导入的模板第一行为字段名</li>
+                                <li class="list-group-item">2、第二行起为空时生成文本框，字段下方有待选文字时生成下拉菜单</li>
+                                <li class="list-group-item">3、不能有空行和列</li>
+                                <li class="list-group-item">
+                                    4、所有字段都是必填项   <font color="red" style="position:relative; top:5px;font-weight:bold;font-size:16px">*</font></li>
+                            </ul>
+                            
+                    </div>
                 </div>
             </div>
         </div>
