--- a/application/admin/view/templates/list.html
+++ b/application/admin/view/templates/list.html
@@ -55,7 +55,7 @@
                                 <td>
                                     <input type="text" class="btn btn-xs" value="{$vo.shareUrl}" name="{$vo.tid}"id="{$vo.tid}">
                                     <a href="javascript:;" class="copy btn btn-xs btn-info" dataid="{$vo.tid}"><span class="glyphicon glyphicon-share-alt"></span>分享</a>
-                                    <a href="{$vo.shareUrl}" target="blank"  class="copy btn btn-xs btn-success"><span class="glyphicon glyphicon-eye-open"></span>查看</a>
+                                    <a href="{$vo.shareUrl}" target="_blank"  class="copy btn btn-xs btn-success"><span class="glyphicon glyphicon-eye-open"></span>查看</a>
                                 </td>
                             </tr>
                             {/volist}
