--- a/application/admin/view/admin/list.html
+++ b/application/admin/view/admin/list.html
@@ -38,7 +38,7 @@
                                                 <a href="#" class="admin-status btn btn-darkorange btn-xs" dataid="{$vo.id}" status="{$vo.status}">禁用</a> {else /}
                                                 <a href="#" class="admin-status btn btn-success btn-xs" dataid="{$vo.id}" status="{$vo.status}">启用</a> {/if}
                                                 <a href=" {:url( 'admin/Admin/edit',[ 'id'=>$vo.id])}" class="btn btn-azure btn-xs">编辑</a>
-                                                <a href="#" class="btn btn-danger btn-xs admin-del">删除</a>
+                                                <a href="#" class="btn btn-danger btn-xs admin-del" dataid="{$vo.id}">删除</a>
                                                 {/if}
                                             </td>
                                         </tr>
