--- a/application/admin/view/templates/detail.html
+++ b/application/admin/view/templates/detail.html
@@ -41,7 +41,7 @@
             showSearch: true,
             minimumCountColumns: 2, //最少允许的列数
             clickToSelect: true, //是否启用点击选中行
-            height: 750, //行高，如果没有设置height属性，表格自动根据记录条数觉得表格高度
+            // height: 750, //行高，如果没有设置height属性，表格自动根据记录条数觉得表格高度
             uniqueId: "ID", //每一行的唯一标识，一般为主键列
 
             detailView: false, //是否显示父子表
