--- a/application/admin/view/templates/list.html
+++ b/application/admin/view/templates/list.html
@@ -18,9 +18,10 @@
                             <tr>
                                 <th>任务名</th>
                                 {if session('admin.is_super')==1} <th>用户名</th>{/if}
-                                <th>创建时间</th>
+                                <th>记录数</th>
                                 <th>状态</th>
                                 <th colspan="3">操作</th>
+                                <th>创建时间</th>
                             </tr>
                         </thead>
                         <tbody>
@@ -28,17 +29,16 @@
                             <tr>
                                 <td><a href="{:url('admin/Templates/detail',['id'=>$vo.tid])}">{$vo.tname}</a> </td>
                                 {if session('admin.is_super')==1}<td>{$vo.tuser}</td>{/if}
-                                <td>{$vo.create_time|date='Y年m月d日 H:i'}</td>
+                                <td>{$vo.count}</td>
                                 {if $vo.status==1}
                                 <td>
                                     <a href="#" class="tempalte-status btn btn-success btn-xs"
-                                        status="{$vo.status}">任务进行中</a>
+                                        status="{$vo.status}">进行中</a>
                                 </td>
                                 <td>
                                     <a href="#" class="tempalte-status btn btn-warning btn-xs control-tempalte"
                                         dataid="{$vo.id}" status="{$vo.status}">暂停</a>
-                                </td>
-                                <td><a href="#" class="tempalte-status btn btn-darkorange btn-xs del-tempalte disabled"
+                                    <a href="#" class="tempalte-status btn btn-darkorange btn-xs del-tempalte disabled"
                                         dataid="{$vo.id}" status="{$vo.status}">删除</a> </td>
 
                                 {else /}
@@ -48,15 +48,24 @@
                                 </td>
                                 <td>
                                     <a href="#" class="tempalte-status btn btn-success btn-xs control-tempalte"
-                                        dataid="{$vo.id}" status="{$vo.status}">开始</a> </td>
-                                <td><a href="#" class="tempalte-status btn btn-darkorange btn-xs del-tempalte"
+                                        dataid="{$vo.id}" status="{$vo.status}">开始</a>
+                                    <a href="#" class="tempalte-status btn btn-darkorange btn-xs del-tempalte"
                                         dataid="{$vo.id}" status="{$vo.status}">删除</a> </td>
                                 {/if}
                                 <td>
-                                    <input type="text" class="btn btn-xs" value="{$vo.shareUrl}" name="{$vo.tid}"id="{$vo.tid}">
-                                    <a href="javascript:;" class="copy btn btn-xs btn-info" dataid="{$vo.tid}"><span class="glyphicon glyphicon-share-alt"></span>分享</a>
-                                    <a href="{$vo.shareUrl}" target="_blank"  class="copy btn btn-xs btn-success"><span class="glyphicon glyphicon-eye-open"></span>查看</a>
+                                    <a href="{:url('admin/Templates/detail',['id'=>$vo.tid])}"
+                                        class="btn btn-xs btn-success"><span
+                                        class="glyphicon glyphicon-list-alt"></span>查看数据</a>
                                 </td>
+                                <td>
+                                    <input type="text" class="btn btn-xs" value="{$vo.shareUrl}" name="{$vo.tid}"
+                                        id="{$vo.tid}">
+                                    <a href="javascript:;" class="copy btn btn-xs btn-info" dataid="{$vo.tid}"><span
+                                            class="glyphicon glyphicon-share-alt"></span>分享</a>
+                                    <a href="{$vo.shareUrl}" target="_blank" class="copy btn btn-xs btn-default"><span
+                                            class="glyphicon glyphicon-eye-open"></span>查看任务</a>
+                                </td>
+                                <td>{$vo.create_time|date='Y年m月d日 H:i'}</td>
                             </tr>
                             {/volist}
 
