--- a/application/admin/view/templates/detail.html
+++ b/application/admin/view/templates/detail.html
@@ -48,7 +48,7 @@
             //显示导出插件
             showExport: true,
             //导出文件类型
-            exportTypes: ['csv', 'excel', 'xlsx'],
+            exportTypes: ['csv', 'xlsx'],
             //导出范围
             exportDataType: "all", //basic'导出当前页, 'all'导出全部, 'selected'导出选中项.
             //文件名称设置
