--- a/application/admin/view/templates/detail.html
+++ b/application/admin/view/templates/detail.html
@@ -1,14 +1,12 @@
 {extend name="public/admin_base"}
-{block name="title"}{$template.tname}{/block}
+{block name="title"}表单{$template.tname}数据{/block}
 {block name="page-main"}
 <div class="row">
     <div class="col-xs-12">
         <div class="widget radius-bordered">
-
             <div>
                 <table id="table" data-search="true" class="table table-striped table-hover table-bordered"></table>
             </div>
-
         </div>
     </div>
 </div>
