--- a/application/admin/view/templates/detail.html
+++ b/application/admin/view/templates/detail.html
@@ -1,5 +1,5 @@
 {extend name="public/admin_base"}
-{block name="title"}表单{$template.tname}数据{/block}
+{block name="title"}数据-{$template.tname}{/block}
 {block name="page-main"}
 <div class="row">
     <div class="col-xs-12">
