--- a/application/index/view/template/template.html
+++ b/application/index/view/template/template.html
@@ -65,6 +65,9 @@
     <div class="container" style="margin-top: 50px;margin-bottom: 50px;">
         <div class="row col-xs-offset-1">
             <div class="col-xs-11 project-block-background">
+                {present name="$hello"}
+                <h1>{$hello}</h1>
+                {else /}
                 <form class="form-horizontal" role="form" id="subForm" autocomplete="off">
                     <fieldset>
                         <legend>{$tname}</legend>
@@ -98,6 +101,7 @@
                         </div>
                     </fieldset>
                 </form>
+                {/present}
             </div>
         </div>
     </div>
