--- a/application/admin/view/import/create_template_third.html
+++ b/application/admin/view/import/create_template_third.html
@@ -3,9 +3,32 @@
 {block name="title"}完善模板信息{/block}
 
 {block name="page-style"}
-<link href="__CSS__/mysite.css" rel="stylesheet">{/block}
+<link href="__CSS__/mysite.css" rel="stylesheet">
+
+<style>
+    .login-area {
+                color: white;
+                font-size: 16px;
+            }
+    
+            .login-area span {
+                margin-left: 10px;
+            }
+            .login-area a{
+                color:white;
+                text-decoration: none;
+            }
+            .login-area a:hover {
+                text-decoration: underline;
+            }
+    
+    </style>
+{/block}
 {block name="page-main"}
 <div class="container project-team-container">
+    <div class="bg-themeprimary widget-header">
+        <span class="widget-caption">第三步：分享表单</span>
+    </div>
     <div class="widget-body">
         <div class="row">
             <div class="col-lg-9">
@@ -15,7 +38,7 @@
                     </li>
                     <li role="tab" class="disabled second" aria-disabled="true">
                         <a id="formWizard-t-1" aria-controls="formWizard-p-1">
-                            <span class="number">2</span> 完善模板
+                            <span class="number">2</span> 完善表单
                         </a>
                     </li>
                     <li role="tab" class="current last" aria-disabled="false" aria-selected="true">
@@ -25,7 +48,7 @@
                 </ul>
                 <div class="form-horizontal">
                     <div class="project-first-step">
-                        <p>您的采集模板已经创建成功，分享给大家吧！</p>
+                        <p>您的采集表单已经创建成功，分享给大家吧！</p>
                         <input type="text" class="form-control" style="width: 60%;" value="{$shareUrl}" readonly
                             id="textAreas" />
                         <a href="javascript:;" id="copy">复制</a>
