--- a/application/admin/view/templates/detail.html
+++ b/application/admin/view/templates/detail.html
@@ -1,11 +1,42 @@
 {extend name="public/admin_base"}
 {block name="title"}数据-{$template.tname}{/block}
+{block name="page-style"}
+<style>
+     .login-area {
+            color: white;
+            font-size: 16px;
+        }
+
+        .login-area span {
+            margin-left: 10px;
+        }
+        .login-area a{
+            color:white;
+            text-decoration: none;
+        }
+        .login-area a:hover {
+            text-decoration: underline;
+        }
+    input[type=checkbox],
+    input[type=radio] {
+        opacity: 1;
+        position: inherit;
+        left: -9999px;
+        z-index: 12;
+        width: 14px;
+        height: 14px;
+        cursor: pointer;
+    }
+</style>
+
+{/block}
 {block name="page-main"}
 <div class="row">
     <div class="col-xs-12">
         <div class="widget radius-bordered">
             <div>
-                <table id="table" data-search="true" class="table table-striped table-hover table-bordered"></table>
+                <table id="table" data-search="true"
+                    class="table table-striped table-hover table-bordered text-nowrap  table-condensed"></table>
             </div>
         </div>
     </div>
